--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/enyasantos/node-typescript-api#readme",
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^14.14.28",
@@ -42,6 +43,9 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
+    "@overnightjs/core": "^1.7.5",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "module-alias": "^2.2.2"
   }
 }
