--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "yarn build && node dist/src/index.js",
     "start:dev": "ts-node-dev --transpile-only 'src/index.ts'",
     "lint": "eslint ./src ./test --ext .ts",
+    "style:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
+    "style:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "test:functional": "jest --projects ./test --runInBand",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:functional": "jest --projects ./test --runInBand"
   },
   "repository": {
     "type": "git",
@@ -37,6 +38,7 @@
     "@typescript-eslint/parser": "^4.15.1",
     "eslint": "^7.20.0",
     "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.1.1",
